--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -12,14 +12,17 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary: #1976d2;
-$secondary: #26a69a;
-$accent: #9c27b0;
+$primary: #0f766e;
+$secondary: #6b7280;
+$accent: #14b8a6;
 
-$dark: #1d1d1d;
-$dark-page: #121212;
+$dark: #111827;
+$dark-page: #0f172a;
 
-$positive: #21ba45;
-$negative: #c10015;
-$info: #31ccec;
-$warning: #f2c037;
+$positive: #16a34a;
+$negative: #dc2626;
+$info: #0284c7;
+$warning: #f59e0b;
+
+// #00466e
+// #004d40
